# touvlo

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  LICENSE  README.md  dev-requirements.txt  doc-requirements.txt  pull_request_template.md  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: make.bat  requirements.txt
docs/_source/: conf.py  index.rst  lgx_rg.rst  lin_rg.rst  nn_clsf.rst  nnet.rst  rec_sys.rst  unsupv.rst  utils.rst
docs/_source/_build/rinoh/.doctrees/: index.doctree
docs/source/: conf.py  index.rst  supv.rst  unsupv.rst
ml_algorithms/: dummy_code.py  kmeans.py  lgx_rg.py  lin_rg.py  linear_regression.py  logistic_regression.py  nn.py  utils.py
tests/: test_dummy_code.py  test_kmeans.py  test_lgx_rg.py  test_lin_rg.py  test_linear_regression.py  test_logistic_regression.py  test_nn.py  test_nn_clsf.py  test_np.py  test_pca.py  test_utils.py
tests/lgx_rg/: test_cmpt_grf.py  test_sgl_parm.py
tests/nnet/: test_cmpt_grf.py  test_sgl_parm.py
tests/rec_sys/: test_cf.py
tests/supv/: test_lin_rg.py  test_nn.py  test_nn_clsf.py
tests/unsupv/: test_anmly_detc.py  test_kmeans.py
touvlo/: __init__.py  nn_clsf.py  utils.py
touvlo/lgx_rg/: __init__.py  cmpt_grf.py  sgl_parm.py
touvlo/nnet/: __init__.py  cmpt_grf.py  sgl_parm.py
touvlo/rec_sys/: __init__.py  cf.py
touvlo/supv/: __init__.py  lgx_rg.py  lin_rg.py  nn.py  nn_clsf.py
touvlo/unsupv/: __init__.py  anmly_detc.py  kmeans.py  pca.py
