[metadata]
name = touvlo 
summary = ML algorithms implemented from scratch provided block by block
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Benardi Nunes
maintainer = Benardi Nunes
author-email = benardinunes@gmail.com
url = http://touvlo.readthedocs.org
project_urls =
    Source=https://github.com/Benardi/touvlo
    Tracker=https://github.com/Benardi/touvlo/issues
requires-python = >=3.5
platforms = any
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = touvlo
    
[build_sphinx]
source-dir = docs/source
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 0 
